--- a/templates/question.html
+++ b/templates/question.html
@@ -432,7 +432,7 @@ label:hover .onhover { display: inline; }
 
             {% endif %} {# not interstitial #}
 
-            {% if answer_obj %}
+            {% if answer_obj and can_review %}
               <select style="display: block; margin: 1em 0; font-size: 80%; background-color: white; padding: .2em .2em .15em .2em" onchange="update_review_status(this)">
                 {% for key, label in review_choices %}
                   <option value="{{key}}" {% if answer_obj.reviewed == key %}selected{% endif %}>
@@ -797,9 +797,10 @@ $(function() {
     });
 })
 
-{% if answer_obj %}
+{% if answer_obj and can_review %}
 function update_review_status(elem) {
   var reviewed = $(elem).val();
+  $(elem).blur();
   ajax_with_indicator({
       url: "{{task.get_absolute_url|escapejs}}/_save",
       method: "POST",
