--- a/templates/project.html
+++ b/templates/project.html
@@ -123,12 +123,12 @@
 
 {% block action_buttons %}
     {% if not project.is_account_project or project.is_deletable %}
-      <button id="show-project-settings" class="btn btn-sm" onclick="$('#project_settings').modal();">
+      <button class="btn btn-sm" onclick="$('#project_settings').modal();">
         <i class="glyphicon glyphicon-cog"></i> Settings</a>
       </button>
     {% endif %}
     {% if send_invitation.can_add_invitee_to_team %}
-      <button id="show-project-settings" class="btn btn-sm" onclick="invite_user_into_project()">
+      <button id="show-project-invite" class="btn btn-sm" onclick="invite_user_into_project()">
         <i class="glyphicon glyphicon-user"></i><i class="glyphicon glyphicon-plus"></i>
         Invite
       </button>
