in output documents highlight unanswered/skipped questions in yellow

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,10 @@
               color: #888;
             }
 
+            .question-answer[data-answer-type="skipped"] {
+              background-color: #eeee99;
+              padding: 1px 1px;
+            }
             .question-answer[data-reviewed="0"] {
               background-color: #d9534f;
               color: white;
