--- a/templates/project.html
+++ b/templates/project.html
@@ -357,7 +357,12 @@
                         <div class="col-sm-3">
                       {% endif %}
 
-                      <div class="question-icon">
+                      <div class="question-icon" style="position: relative;">
+                        <div style="position: absolute; left: -1px; top: -1px;">
+                          {% if t.is_finished %}
+                            <span class="glyphicon glyphicon-ok" style="color: #96B"></span>
+                          {% endif %}
+                        </div>
                         <img
                           {% if t.get_app_icon_url and rec.question.spec.app_overrides_name_and_icon is None %}
                           src="{{t.get_app_icon_url}}"
