upgrade to FontAwesome 5.0.0
The FontAwesome 4.7.0 download's hash changed, breaking the build, so I'm just upgrading.

--- a/templates/base-landing.html
+++ b/templates/base-landing.html
@@ -42,7 +42,7 @@
             }
         </style>
         <link rel="stylesheet" href="{% static "vendor/bootstrap/css/bootstrap-theme.min.css" %}">
-        <link rel="stylesheet" href="{% static "vendor/fontawesome/css/font-awesome.min.css" %}">
+        <script defer src="{% static "vendor/fontawesome.js" %}"></script>
 
         {% block head %}{% endblock %}
 
