--- a/templates/bootstrap-helpers.html
+++ b/templates/bootstrap-helpers.html
@@ -20,7 +20,7 @@
 <!-- bootstrap-helpers: ajax loading indicator -->
 <div id="ajax_loading_indicator" style="display: none; position: fixed; left: 0; top: 0; width: 100%; height: 100%; z-index: 100000; text-align: center; background-color: rgba(255,255,255,.75)">
   <div style="margin: 20% auto">
-    <div><span class="fa fa-spinner fa-pulse"></span></div>
+    <div><span class="fas fa-spinner fa-pulse"></span></div>
     <div class="message">Loading...</div>
   </div>
 </div>
