generate and cache PNG thumbnails for HTML user uploads to file-type questions and show the thumbnail on the question page (when going back to an already-answered question) and when rendering file-type questions in output documents

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,6 +70,9 @@
               color: white;
               padding: 1px .33em;
             }
+              div.question-answer[data-reviewed="0"] { margin-bottom: 1em; }
+              .question-answer[data-reviewed="0"] p { margin: 0; }
+              .question-answer[data-reviewed="0"] a { color: white; text-decoration: underline; }
             .question-answer[data-reviewed="1"] {
               border: 1px solid #5bc0de;
               padding: 1px 3px;
