--- a/templates/question.html
+++ b/templates/question.html
@@ -270,14 +270,7 @@ label:hover .onhover { display: inline; }
               {% if answer %}
               <div style="margin: 1em 0">
                 <p>The following file is uploaded:</p>
-                {% if answer.type|slice:"0:6" == "image/" %}
-                	<div style="margin: 1em 0;">
-                		<img src="{{answer.url}}" class="img-responsive" style="border: 1px solid black"/>
-                	</div>
-                {% else %}
-                	<p><a href="{{answer.url}}">Download</a></p>
-                {% endif %}
-                <p>Size: {{answer.size|filesizeformat}}</p>
+                {{answer_rendered|safe}}
                 <p>Select a new file if you would like to replace it:</p>
               </div>
               {% endif %}
