we had two too many title fields - drop Project.title and convert Task.title to Task.title_override
Titles of Tasks and Projects were constructed from four sources:

* the title of the Module (for Projects, the Module of of the root Task)
* the title field on the Task, which normally holds a copy of the Task's Module's title, except for Tasks that are the root of a Project which ignored this field and used the Project's title instead
* the title field on the Project, which normally holds a copy of th root Task's title, which was in turn normally a copy of the Task's Module's title
* for render_title, the 'instance-name' field on the Module if present, which renders a template

We were in need of refactoring because:

* There was redundancy because the Module title was typically stored in three places.
* There was some confusing logic because Task titles were, for root Tasks, pulled from the Project.title field instead of the Task's own value.
* 'instance-name' was not working for root Tasks of Projecs because those Tasks took their titles from the Project.title field, which is how I came up against all of this.

This commit simplifies how Project and Task titles are computed and stored by dropping Project.title and simplifying Task.title so that in most cases titles are pulled from Module titles and are not redundantly stored.

Model changes:

* Task.title is renamed to title_override, is now nullable, and the migration clears out the value if it's the same as the Task's Module's title. Task creation no longer sets the task title -- the null default is what we want.
* Task.render_title is now Task.title, a new property, which computes a title by taking the title_override if it's set, else returning the "instance-name" template if present, otherwise falling back to the Task's Module's title. Since template rendering can recursively lead to computing the title, I added some guards against infinite recursion and a flag is passed into template rendering to avoid accessi

--- a/templates/project-base.html
+++ b/templates/project-base.html
@@ -3,6 +3,13 @@
 {% block head %}
 <style>
 {% include "focus-area-styles.css" %}
+h1, div.subtitle {
+   text-align: center;
+}
+  div.subtitle {
+    margin: .5em 0 .75em 0;
+    font-weight: bold;
+  }
 @media screen and (min-width: 992px) {
   #action-buttons button, #action-buttons a {
     display: block;
@@ -59,14 +66,21 @@
       {% block above_title %}
       {% endblock %}
 
-      <h1 style="text-align: center;">
+      {% with project.title as title %}
+      <h1>
         {% if project.root_task.get_app_icon_url %}
         <img src="{{project.root_task.get_app_icon_url}}" style="height: 1em">
         {% endif %}
-        {{project.title}}
+        {{title}}
         {% block title_suffix_text %}
         {% endblock %}
       </h1>
+      {% if title != project.root_task.module.spec.title %}
+      <div class="subtitle">
+        {{project.root_task.module.spec.title}}
+      </div>
+      {% endif %}
+      {% endwith %}
 
       {% block body_content %}
       {% endblock %}
