--- a/templates/project-list-answers.html
+++ b/templates/project-list-answers.html
@@ -35,7 +35,7 @@ h2 { margin-top: 1.5em; }
           <span class="glyphicon glyphicon-list-alt"></span>
         {% endif %}
 
-          {{section.task.render_title}}
+          {{section.task.title}}
         </a>
       </h2>
 
