--- a/templates/bootstrap-helpers.html
+++ b/templates/bootstrap-helpers.html
@@ -1,17 +1,17 @@
 <!-- bootstrap-helpers: typical modal dialog -->
-<div id="global_modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="errorModalTitle" aria-hidden="true">
+<div id="global_modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="global_modal_title" aria-hidden="true">
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title" id="errorModalTitle"> </h4>
+        <h4 class="modal-title" id="global_modal_title"> </h4>
       </div>
       <div class="modal-body">
         <p> </p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Yes</button>
+        <button id="global_modal_primary" type="button" class="btn btn-primary" data-dismiss="modal">Yes</button>
       </div>
     </div>
   </div>
