show a spinner when the module-finished page is reloaded because of data changes

--- a/templates/module-finished.html
+++ b/templates/module-finished.html
@@ -234,7 +234,8 @@
             timeout: 5000
           });
 
-          // Reload the page.
+          // Dim the page and reload.
+          $('#ajax_loading_indicator').fadeIn();
           window.location.reload();
         },
         complete: function() {
