show the Q version number in the footer
see #256

--- a/templates/base.html
+++ b/templates/base.html
@@ -274,7 +274,7 @@
               <div class="row">
                 <div class="col-sm-4"><p class="pull-left">&copy; GovReady {% now "Y" %}</p></div>
                 <div class="col-sm-4"><img alt="GovReady Q logo" src="{% static "img/brand/govready_logo_transparent.png" %}" width="110px;"></div>
-                <div class="col-sm-4"><p class="pull-right">&nbsp;</p></div>
+                <div class="col-sm-4"><p class="pull-right">ver {{APP_VERSION_STRING}}</p></div>
             </div>
           </div>
         </div>
