--- a/templates/project.html
+++ b/templates/project.html
@@ -191,12 +191,24 @@
     {% if authoring_tool_enabled %}
       <center style="font-size: 90%;" class="authoring-tool-hidden"><p class="text-info">
         You are in author mode. Authoring tools have been enabled for this module.
-        <br>
-        <a href="#" onclick="show_authoring_tool_module_editor(); return false;">
-          <span class="glyphicon glyphicon-pencil"></span>
-          Edit App
-        </a>
       </p></center>
+
+    <center style="font-size: 90%;" class="authoring-tool-hidden"><p>
+      <a href="#" onclick="show_authoring_tool_module_editor(); return false;" style="margin: 0 1em;">
+        <span class="glyphicon glyphicon-pencil"></span>
+        Edit App
+      </a>
+
+      <a href="#" onclick="authoring_tool_new_question({{project.root_task.id}}, true); return false;" style="margin: 0 1em;">
+      <span class="glyphicon glyphicon-plus"></span>
+      Add Question
+      </a>
+
+      <a href="#" onclick="authoring_tool_reload_app({{project.root_task.id}}); return false;" style="margin: 0 1em;">
+      <span class="glyphicon glyphicon-refresh"></span>
+      Reload App from {{project.root_task.module.app.source.get_description}}
+      </a>
+    </p></center>
     {% endif %}
 {% endblock %}
 
@@ -440,23 +452,6 @@
         </div> <!-- /.tabpanel -->
       {% endfor %}
     </div> <!-- /tabs -->
-
-    {% if authoring_tool_enabled %}
-    <center style="font-size: 90%;" class="authoring-tool-hidden"><p>
-      <span class="glyphicon glyphicon-pencil"></span>
-
-      <a href="#" onclick="authoring_tool_new_question({{project.root_task.id}}, true); return false;" style="margin: 0 1em;">
-      <span class="glyphicon glyphicon-plus"></span>
-      Add Question
-      </a>
-
-      <a href="#" onclick="authoring_tool_reload_app({{project.root_task.id}}); return false;" style="margin: 0 1em;">
-      <span class="glyphicon glyphicon-refresh"></span>
-      Reload App from {{project.root_task.module.app.source.get_description}}
-      </a>
-    </p></center>
-    {% endif %}
-
   </div>
 </div>
 {% endblock %}
