--- a/templates/project-base.html
+++ b/templates/project-base.html
@@ -3,13 +3,23 @@
 {% block head %}
 <style>
 {% include "focus-area-styles.css" %}
-h1, div.subtitle {
-   text-align: center;
+
+#project-icon {
+  float: left;
+  margin: 0 1em 1em 0;
+  width: 75px;
+  border: 1px solid #999;
 }
-  div.subtitle {
-    margin: .5em 0 .75em 0;
-    font-weight: bold;
-  }
+
+h1 {
+  margin: 0;
+}
+
+div.subtitle {
+  margin: .25em 0 .75em 0;
+  font-weight: bold;
+}
+
 @media screen and (min-width: 992px) {
   #action-buttons button, #action-buttons a {
     display: block;
@@ -66,15 +76,17 @@ h1, div.subtitle {
       {% block above_title %}
       {% endblock %}
 
+      {% if project.root_task.get_app_icon_url %}
+        <img id="project-icon" src="{{project.root_task.get_app_icon_url}}">
+      {% endif %}
+
       {% with project.title as title %}
       <h1>
-        {% if project.root_task.get_app_icon_url %}
-        <img src="{{project.root_task.get_app_icon_url}}" style="height: 1em">
-        {% endif %}
         {{title}}
         {% block title_suffix_text %}
         {% endblock %}
       </h1>
+
       {% if title != project.root_task.module.spec.title %}
       <div class="subtitle">
         {{project.root_task.module.spec.title}}
@@ -82,8 +94,12 @@ h1, div.subtitle {
       {% endif %}
       {% endwith %}
 
+      <div class="clearfix"></div>
+
+      <div style="margin-top: 1em">
       {% block body_content %}
       {% endblock %}
+      </div>
     </div> <!-- /focus-area-wrapper -->
   </div> <!-- /col -->
 </div> <!-- /row -->
